# matrix-mult

./: .gitattributes  README.md
FinalProject_FPGA/: .floorplanner.ini  .ng_run_manager.ini  final_project.rdf  final_project_tcl.html  pinout.pdc  transcript
FinalProject_FPGA/final_project_tcr.dir/: pn241207210059.tcr  pn241208164005.tcr  pn241209195649.tcr  pn241209201118.tcr  pn241209201848.tcr  pn241209201930.tcr  pn241209202452.tcr  pn241209202509.tcr  pn241209223510.tcr  pn241216152550.tcr
FinalProject_FPGA/impl_1/: .build_status  final_project_impl_1.arearep  final_project_impl_1.bgn  final_project_impl_1.cprj  final_project_impl_1.mrp  final_project_impl_1.par  final_project_impl_1.pwrprd  final_project_impl_1.twr  final_project_impl_1.twr.html  final_project_impl_1.vm  final_project_impl_1_bgn.html  final_project_impl_1_css.twr.html  final_project_impl_1_lattice.synproj  final_project_impl_1_lseres.html  final_project_impl_1_map.hrr  final_project_impl_1_map.udb  final_project_impl_1_map_mapres.html  final_project_impl_1_mrp.html  final_project_impl_1_pad.html  final_project_impl_1_par.html  final_project_impl_1_rtl.lsedata  final_project_impl_1_rtl.udb  final_project_impl_1_summary.html  final_project_impl_1_syn.psn  final_project_impl_1_syn.udb  final_project_impl_1_synpsn.html  final_project_impl_1_synthesize.tcl  final_project_impl_1_vo.sdf  final_project_impl_1_vo.vo  hdla_gen_hierarchy.html  mypll.v  (+4 more)
FinalProject_microcontroller/: PyCharm Community Edition 2024.2.5.lnk  matmul.py
FinalProject_microcontroller/Matrix_Sender_C/src/: CMakeLists.txt  main.c
(+27 files in other folders)
